Implementation des sprites dans le combat